# csapex_generic_obstacle_detection

./: CMakeLists.txt  README.md  package.xml  plugins.xml
include/generic_obstacle_detection/: detector.h  heat_calculator.h  histogram.h  low_pass_filter.h  obstacle_classification.h  point.h
src/obstacle_detection/: detector.cpp  heat_calculator.cpp  histogram.cpp  low_pass_filter.cpp  obstacle_detector.cpp  point.cpp  point_histogram.h  point_histogram.hpp
